# app_global

./: README.md  pyproject.toml
example/app_global_test/: app.env
example/app_global_test/dotvscode/: launch.json  settings.json
example/app_global_test/lib/sub_proj/: __init__.py  sub_proj.py
example/app_global_test/src/app_global_sample/: __main__.py  app_global_sample.py  util.py
src/app_global/: config.py
